--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<title>GGAC 마니또 관리자 페이지</title>
+<title>하루학생회 마니또 관리자 페이지</title>
 
 <!-- Firebase v8 (안정된 방식) -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -530,3 +530,4 @@ async function runMissionMatching() {
 
 </body>
 </html>
+
