--- a/admin.html
+++ b/admin.html
@@ -100,7 +100,7 @@
 <body>
 
 <div id="wrap">
-    <h1>GGAC 마니또 관리자</h1>
+    <h1>하루학생회회 마니또 관리자</h1>
 
     <div class="box">
         <h3>참여자 대량 등록</h3>
@@ -530,4 +530,5 @@ async function runMissionMatching() {
 
 </body>
 </html>
+
 
