--- a/admin.html
+++ b/admin.html
@@ -160,12 +160,13 @@
    Firebase(v8) 설정
    ---------------------- */
 const firebaseConfig = {
-    apiKey: "AIzaSyCo0eEyu6iaqSxd0zCCYKgc9tjrLsJUIvo",
-    authDomain: "manitto3-e0164.firebaseapp.com",
-    projectId: "manitto3-e0164",
-    storageBucket: "manitto3-e0164.firebasestorage.app",
-    messagingSenderId: "97931219910",
-    appId: "1:97931219910:web:4ad27aae6fef4b6024d8c7"
+  apiKey: "AIzaSyBJo-W_5pWHSCPn6ina69HBnGe6I7AOc6I",
+  authDomain: "manitto2-2f483.firebaseapp.com",
+  databaseURL: "https://manitto2-2f483-default-rtdb.firebaseio.com",
+  projectId: "manitto2-2f483",
+  storageBucket: "manitto2-2f483.firebasestorage.app",
+  messagingSenderId: "643868700290",
+  appId: "1:643868700290:web:267fa3533d5777c4f48e9b"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
@@ -530,5 +531,6 @@ async function runMissionMatching() {
 
 </body>
 </html>
+
 
 
