Update title and content of index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>🎄하루학생회 마니또🎄</title>
+    <title>🎄포근한 하루의 겨울 마니또🎄</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
 </div>
 
 <div id="app">
-    <h1>🎄하루학생회 마니또🎄</h1>
+    <h1>🎄포근한 하루의 겨울 마니또🎄</h1>
 
     <div id="login-section">
         <input id="codeInput" maxlength="4" placeholder="4자리 개인코드 입력">
@@ -50,4 +50,5 @@
 
 </body>
 </html>
+
 
